fixed document width on small device

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,6 +117,8 @@ main {
 
     main > p {
     padding: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
 }
 
 .sidebar {
@@ -206,25 +208,6 @@ li:nth-child(odd) {
     width: 100%;
 }
 
-/*Cards are split into two columns at 992px or smaller 
-@media (max-width: 1030px) {
-    main {
-        flex-direction: column;
-        width: 100%;
-    }
-    main > section {
-      width: 100%;
-    }
-    .sidebar {
-    width: 100%;
-    }
-    .rightside {
-        width: 100%;
-        justify-content: center;
-    }
-*/
-
- 
 /*Page displays as one column at 768px or smaller   */
 @media (max-width: 768px) {
     h1 {
@@ -238,6 +221,7 @@ li:nth-child(odd) {
     .sidebar {
         text-align: center;
         flex-direction: row;
+        flex-direction: column;
     }
 
     .rightside {
@@ -245,7 +229,9 @@ li:nth-child(odd) {
         flex-direction: column;
     }
 
-
+    body {
+        flex-direction: column;
+    }
   }
 
 
